kubernetes/data_access_deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: data-access
  namespace: drinksfinder
  labels:
    app: drinksfinder
    role: data-access-server
spec:
  selector:
    role: data-access-server
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-access-deployment
  namespace: drinksfinder
  labels:
    app: drinksfinder
    role: data-access-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drinksfinder
      role: data-access-server
  template:
    metadata:
      labels:
        app: drinksfinder
        role: data-access-server
    spec:
      # Apply anti-affinity to keep pods on different nodes for HA
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: drinksfinder
            role: data-access-server
      containers:
      - name: server
        image: docker.io/matthewgeldert/drinksfinder-data-access:1.0
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          initialDelaySeconds: 10
          timeoutSeconds: 10
          httpGet:
            path: /ready
            port: 8080
        readinessProbe:
          timeoutSeconds: 10
          httpGet:
            path: /ready
            port: 8080
        resources:
          limits:
            memory: 50Mi
          requests:
            cpu: 100m
            memory: 50Mi
